--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,17 @@ env:
   - secure: h4Y7ZvgbvOj5T71ubRcw3Fy3KXF8qHugRFLGK3q2R9YuRsDAf8XH+Y/UiXyH8sac2QSj7Zlny1kA1DEJgwhTXs9wsAVKVJCQNTJGEvhm/4uQgPeNMzMv07Lqe8V+KUBsFH5qhfPJO357ERW0k2f2qljoLSHtHStclt7iGvFdynA=
   - secure: o9L6lXWpXowhQSdiUSmajliBUkQ6n7NrBUqhC09lqe7yXSGhEsgGRXqHoT3q2B4uIqGSiLCa9HQbW0dfDQCs+pADmzHIl3zbTViR88TSaIhOiTrqMUUl5iaO++pneZ2TzgU9bbGHbl6Ixjc6iALH2+F7P+RUM6vLTNPcfnCJa3g=
   - secure: ydxZrS7+1ht3p1tC6DE9W9bjLQGjMkwFBwyhNmcdEM6538kN8ZCBQe7NxSsCrC1nSDBLQ17Cziv0XJHl/pCfPrbkrPPgVFpjDfPeqC2zcGcCNcFQUEylXCvQ4uRU2hKL6dPqCsOQ57Pv3qwpPoprl/usoN5Wh8V7BKplU88ZaYM=
+   # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
+   # via the "travis encrypt" command using the project repo's public key
+   - secure: "zUo2D1qm8B49rQZfQvenlydMO6eWLDlw1zhdTNTzwqJ030ojqI7OCq0u8GJzVkfiqmN07RZHsuGNpjozmNsMgCj8yQkS5+1LXq0ZM4Nz5UOVxQ+KjsEA5XxEWao3Q+wR+YWXfNWlCVXR1INecHhhxF+6SOmPCpEhd7V5Leq3aU8="
   matrix:
   - ANDROID_TARGET=android-23 ANDROID_ABI=armeabi-v7a
+addons:
+  coverity_scan:
+    project:
+      name: "owncloud/android"
+      description: "Build submitted via Travis CI"
+    notification_email: lukas@owncloud.com
+    build_command_prepend: "gradle clean"
+    build_command:   "gradle build"
+    branch_pattern: coverity_scan
